# Cocktail_advisor

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
models/: cocktails_index.faiss  preferences_index.faiss  preferences_index.faiss.json
src/: chat_web.py  llm_integration.py  utils.py  vector_db.py
